Création de plusieurs cartes, création de pipes cards avec filtre par type

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<div class="board">
-  <app-card *ngFor="let currentCard of list" [data]="currentCard" [flipped]="true"></app-card>
-</div>
-
-
+<app-catalog></app-catalog>
