--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,7 +1,8 @@
 <div *ngIf="data !== null"
 class="card"
 [ngClass]="{'flipped': flipped}"
-(click)="toggleFlip()">
+(click)="toggleFlip()"
+[ngStyle]="cardStyle">
 
   <div class="face front">
     <div class="row">
