--- a/src/app/catalog/catalog.component.html
+++ b/src/app/catalog/catalog.component.html
@@ -3,8 +3,10 @@
 <select [(ngModel)]="currentType">
   <option *ngFor="let cur of types" value={{cur.type}}>{{cur.name}}</option>
 </select> <br>
+<label>Nom: </label><input type="text" [(ngModel)]="currentName" /> <br />
+<label>Description: </label><input type="text" [(ngModel)]="currentDesc" /> <br />
 <div class="board">
-  <app-card *ngFor="let currentCard of list|cardType:currentType" [data]="currentCard" [zoom]="0.5" ></app-card>
+  <app-card *ngFor="let currentCard of list|cardType:currentType|nameContains:currentName|descContains:currentDesc" [data]="currentCard" [zoom]="0.5" ></app-card>
 </div>
 
 
