--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,2 @@
-<nav>
-   <ul>
-      <li><a routerLink="/">Home</a></li>
-      <li><a routerLink="/catalog">Ma collection</a></li>
-   </ul>
-</nav>
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
