Création page home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,6 @@
-<p>home works!</p>
+<div class="overlay">
+    <section class="text">
+         <h1>Bienvenue dans un trading Card Heartstone </h1>
+         <p>Dans la partie catalogue, vous pouvez voir les différentes cartes, les filtrer et clicker sur une carte pour la retourner</p>
+    </section>
+</div>
