--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -119,7 +119,7 @@
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
   width: 10%;
-  margin: 0;
+  margin: auto;
 }
 
 .def{
@@ -129,6 +129,6 @@
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
   width: 10%;
-  margin: 0;
+  margin: auto;
   margin-left: 80%;
 }
